--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,5 +8,45 @@
     <title>Document</title>
 </head>
 <body>
+<h1>
+    My Favorite Things
+  Paste Image <img src="preworkimage.jpg" alt="" width="100">
+</h1>
+<h2>
+    My Top Movies
+    <ol>
+       <li> 1. Shawshank Redemption
+
+       </li>
+       <li> 2. True Romance
+
+       </li>
+       <li>
+        3. Braveheart
+       </li>
+      <li>
+        4. Hoosiers
+      </li>
+      <li>
+        5. Waiting for Superman
+      </li>
+       
+    </ol>
+</h2>
+<h2>
+    My Favorite Places to Visit</h2>
+
+<ul>
+    <li>
+        Australia
+    </li>
+    <li>
+        Patagonia
+    </li>
+    <li>Germany</li>
+    <li>India</li>
+    <li>SouthEast Asia</li>
+</ul>
+ <a> href= "https://www.linkedin.com/in/alan-nelson/" class="LinkedIn"</a> 
 </body>
 </html>
